kubernetes/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
  - port: 80
    targetPort: 80
